# masadora

./: pyproject.toml
.github/workflows/: fly-helicopter.yml  helicopter.yml  run-docker-based-plantuml.yml  test-snok-install-poetry.yml
plantuml/: diagram-with-includes.puml  languages-data.json  languages.puml  production_config.iuml  production_controller_sequence.puml  run_plantuml_local.puml
python/helicopter/: README.rst  pyproject.toml
python/helicopter/results/: cricket_grounds_data.csv  cricket_grounds_test_matches_hosted.json
python/helicopter/src/helicopter/: __main__.py  helicopter.py
python/helicopter/src/helicopter/data/: replace_city_names.csv  replace_ground_names.csv
scripts/: automated-wsl-setup.bash
source/: common-template.iuml
